[gd_scene load_steps=7 format=3 uid="uid://bjk0rsklbs68f"]

[ext_resource type="Script" uid="uid://cc4o1ab7rjunn" path="res://ui/level/finished_overlay.gd" id="1_6t8so"]
[ext_resource type="FontFile" uid="uid://dqa6cgjahvk6" path="res://assets/fonts/Stalinist_One/StalinistOne-Regular.ttf" id="2_8fm76"]

[sub_resource type="Animation" id="Animation_g5ip0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(900, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_6t8so"]
resource_name = "slideIn"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(900, 0, 0, 0.2, -6.661743, 0, -0.1, 3.94958, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_8fm76"]
resource_name = "slideOut"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(0, 0, 0, 0.2, -2.212391, -900, -0.1, -1.2452393, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7wab1"]
_data = {
&"RESET": SubResource("Animation_g5ip0"),
&"slideIn": SubResource("Animation_6t8so"),
&"slideOut": SubResource("Animation_8fm76")
}

[node name="FinishedOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6t8so")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7wab1")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 900.0
offset_bottom = 900.0001
grow_horizontal = 2
grow_vertical = 2
color = Color(0.96862745, 0.36078432, 0.92941177, 0.20392157)

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096800014, 0.88, 0.29259998, 1)
theme_override_fonts/font = ExtResource("2_8fm76")
theme_override_font_sizes/font_size = 120
text = "FINISHED"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
